aggiunge la struttura generale dell'html: - un div container principale che contiene :     - un div che conterrà la foto in evidenza     - un div che conterrà il carosello

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
     </head>
     <body>
         
+        <!-- container principale -->
+        <div class="container">
+
+            <!-- container immagine in evidenza -->
+            <div id="selected-img-container">
+
+                <!-- qui ci andrà l'immagine in evidenza -->
+
+            </div>
+
+            <!-- carousel container-->
+            <div id="carousel-container">
+
+                <!-- prev/next buttons  -->
+                <div class="prev" id="up"><i class="fa-solid fa-chevron-up"></i></div>
+                <div class="next" id="down"><i class="fa-solid fa-chevron-down"></i></div>
+
+                <!-- images -->
+
+                <!-- <div class="item active"><img src="img/01.webp" alt="img"></div>
+                <div class="item"><img src="img/02.webp" alt="img"></div>
+                <div class="item"><img src="img/03.webp" alt="img"></div>
+                <div class="item"><img src="img/04.webp" alt="img"></div>
+                <div class="item"><img src="img/05.webp" alt="img"></div> -->
+            </div>
+        </div>
         
         <!-- link js -->
         <script src="js/main.js"></script>
