--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- link google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
         <!-- link fontawesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
        
         <!-- link css -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">        
 
         <title>Carousel</title>
     </head>
@@ -27,6 +32,34 @@
                         <!-- qui ci andrà l'immagine in evidenza -->
                         <div class="item-big active">
                             <img src="img/01.webp" alt="img">
+                            <div class="image-text">
+                                <h2>Marvel's Spiderman Miles Morales</h2>
+                                <p>Experience the rise of Miles Morlaes as the new hero masters incredible, explosive new powers to become his own Spider-Man. </p>
+                            </div>
+                        </div>
+                        <div class="item-big ">
+                            <img src="img/02.webp" alt="img">
+                            <div class="image-text">
+                                <h2>Marvel's Spiderman Miles Morales</h2>
+                                <p>Experience the rise of Miles Morlaes as the new hero masters incredible, explosive new powers to become his own Spider-Man. </p>
+                            </div>
+                        </div>
+                        <div class="item-big ">
+                            <img src="img/03.webp" alt="img">
+                            <div class="image-text">
+                                <h2>Marvel's Spiderman Miles Morales</h2>
+                                <p>Experience the rise of Miles Morlaes as the new hero masters incredible, explosive new powers to become his own Spider-Man. </p>
+                            </div>
+                        </div>
+                        <div class="item-big ">
+                            <img src="img/04.webp" alt="img">
+                            <div class="image-text">
+                                <h2>Marvel's Spiderman Miles Morales</h2>
+                                <p>Experience the rise of Miles Morlaes as the new hero masters incredible, explosive new powers to become his own Spider-Man. </p>
+                            </div>
+                        </div>
+                        <div class="item-big ">
+                            <img src="img/05.webp" alt="img">
                             <div class="image-text">
                                 <h2>Marvel's Spiderman Miles Morales</h2>
                                 <p>Experience the rise of Miles Morlaes as the new hero masters incredible, explosive new powers to become his own Spider-Man. </p>
