--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <template id="selected-obj-template">
-            <div class="item-big active">
+            <div class="item-selected">
                 <img src="img/01.webp" alt="img">
                 <div class="image-text">
                     <h2>Marvel's Spiderman Miles Morales</h2>
@@ -61,7 +61,9 @@
         </template>
 
         <template id="carousel-img-template">
-            <div class="item"><img src="img/01.webp" alt="img"></div>
+            <div class="item">
+                <img src="img/01.webp" alt="img">
+            </div>
         </template>
 
 
